k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: actiondash
  namespace: zechsh
  labels:
    app: actiondash
spec:
  type: ClusterIP
  selector:
    app: actiondash
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
