k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actiondash-ingress
  namespace: zechsh
  labels:
    app: actiondash
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - actiondash.zech.sh
      secretName: actiondash-tls
  rules:
    - host: actiondash.zech.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actiondash
                port:
                  number: 8080
